added JWT authentication and role-based authorization. made a few more changes to the model relationships. note that the appointments system is not working yet. want to make a few more changes to doctor management before i fix the appointment management